; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/v4l2-core/extr_v4l2-event.c___v4l2_event_unsubscribe.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/v4l2-core/extr_v4l2-event.c___v4l2_event_unsubscribe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.v4l2_subscribed_event = type { i32, i32, %struct.TYPE_3__*, %struct.v4l2_fh* }
%struct.TYPE_3__ = type { i32 }
%struct.v4l2_fh = type { i32, %struct.TYPE_4__*, i32 }
%struct.TYPE_4__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.v4l2_subscribed_event*)* @__v4l2_event_unsubscribe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__v4l2_event_unsubscribe(%struct.v4l2_subscribed_event* %0) #0 {
  %2 = alloca %struct.v4l2_subscribed_event*, align 8
  %3 = alloca %struct.v4l2_fh*, align 8
  %4 = alloca i32, align 4
  store %struct.v4l2_subscribed_event* %0, %struct.v4l2_subscribed_event** %2, align 8
  %5 = load %struct.v4l2_subscribed_event*, %struct.v4l2_subscribed_event** %2, align 8
  %6 = getelementptr inbounds %struct.v4l2_subscribed_event, %struct.v4l2_subscribed_event* %5, i32 0, i32 3
  %7 = load %struct.v4l2_fh*, %struct.v4l2_fh** %6, align 8
  store %struct.v4l2_fh* %7, %struct.v4l2_fh** %3, align 8
  %8 = load %struct.v4l2_fh*, %struct.v4l2_fh** %3, align 8
  %9 = getelementptr inbounds %struct.v4l2_fh, %struct.v4l2_fh* %8, i32 0, i32 2
  %10 = call i32 @lockdep_assert_held(i32* %9)
  %11 = load %struct.v4l2_fh*, %struct.v4l2_fh** %3, align 8
  %12 = getelementptr inbounds %struct.v4l2_fh, %struct.v4l2_fh* %11, i32 0, i32 1
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = call i32 @assert_spin_locked(i32* %14)
  store i32 0, i32* %4, align 4
  br label %16

16:                                               ; preds = %36, %1
  %17 = load i32, i32* %4, align 4
  %18 = load %struct.v4l2_subscribed_event*, %struct.v4l2_subscribed_event** %2, align 8
  %19 = getelementptr inbounds %struct.v4l2_subscribed_event, %struct.v4l2_subscribed_event* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = icmp ult i32 %17, %20
  br i1 %21, label %22, label %39

22:                                               ; preds = %16
  %23 = load %struct.v4l2_subscribed_event*, %struct.v4l2_subscribed_event** %2, align 8
  %24 = getelementptr inbounds %struct.v4l2_subscribed_event, %struct.v4l2_subscribed_event* %23, i32 0, i32 2
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** %24, align 8
  %26 = load %struct.v4l2_subscribed_event*, %struct.v4l2_subscribed_event** %2, align 8
  %27 = load i32, i32* %4, align 4
  %28 = call i64 @sev_pos(%struct.v4l2_subscribed_event* %26, i32 %27)
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %25, i64 %28
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 0
  %31 = call i32 @list_del(i32* %30)
  %32 = load %struct.v4l2_fh*, %struct.v4l2_fh** %3, align 8
  %33 = getelementptr inbounds %struct.v4l2_fh, %struct.v4l2_fh* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 8
  %35 = add nsw i32 %34, -1
  store i32 %35, i32* %33, align 8
  br label %36

36:                                               ; preds = %22
  %37 = load i32, i32* %4, align 4
  %38 = add i32 %37, 1
  store i32 %38, i32* %4, align 4
  br label %16

39:                                               ; preds = %16
  %40 = load %struct.v4l2_subscribed_event*, %struct.v4l2_subscribed_event** %2, align 8
  %41 = getelementptr inbounds %struct.v4l2_subscribed_event, %struct.v4l2_subscribed_event* %40, i32 0, i32 1
  %42 = call i32 @list_del(i32* %41)
  ret void
}

declare dso_local i32 @lockdep_assert_held(i32*) #1

declare dso_local i32 @assert_spin_locked(i32*) #1

declare dso_local i32 @list_del(i32*) #1

declare dso_local i64 @sev_pos(%struct.v4l2_subscribed_event*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
